# cpp-scientific

./: .gitignore
assignment1/: CMakeLists.txt  README.md
assignment1/src/: integration.cpp  integration.hpp  main.cpp
assignment1/test/: test_integration.cpp
